--- a/letter.html
+++ b/letter.html
@@ -47,16 +47,16 @@
 
 Please let me know if this is ok, and if so which start date you would prefer.
 
-You can find more information about <a href="http://google.com" target="_blank">important university dates</a> on our website.
+You can find more information about <a href="https://univelcity.com/" target="_blank">important university dates</a> on our website.
 
 
 <h2>Subjects of study</h2>
 
 <p>At the Awesome Science Faculty, we have a pretty open-minded research facility — as long as the subjects fall somewhere in the realm of science and technology. You seem like an intelligent, dedicated researcher, and just the kind of person we'd like to have on our team. Saying that, of the ideas you submitted we were most intrigued by are as follows, in order of priority:</p>
 
-<ol type="1">
+<ol>
     <li>Turning H<sub>2</sub>O into wine, and the health benefits of Resveratrol (C<sub>14</sub>H<sub>12</sub>O <sub>3</sub>.)</li>
-    <li>Measuring the effect on performance of funk bassplayers at temperatures exceeding 30°C (86°F), when the audience size exponentially increases (effect of 3 × 103 increasing to 3 × 104.)</li>
+    <li>Measuring the effect on performance of funk bassplayers at temperatures exceeding 30°C (86°F), when the audience size exponentially increases (effect of 3<sup>103</sup> increasing to 3<sup>104</sup>.)</li>
     <li><abbr title="Hyper Text Markup Language">HTML</abbr> and <abbr title="Cascading Style Sheet">CSS</abbr> constructs for representing musical scores.</li>
 </ol>
 
@@ -68,19 +68,19 @@ You can find more information about <a href="http://google.com" target="_blank">
 
 <dl>
     <dt>Polynesian chicken dance</dt>
-    <dd>A little known but <em>very</em> influential dance dating back as far as 300BC, a whole village would dance around in a circle like chickens, to encourage their livestock to be "fruitful".</dd>
+    <dd>A little known but <em>very</em> influential dance dating back as far as 300<abbr title="Before City">BC</abbr>, a whole village would dance around in a circle like chickens, to encourage their livestock to be "fruitful".</dd>
     <dt>Icelandic brownian shuffle</dt>
     <dd>Before the Icelanders developed fire as a means of getting warm, they used to practice this dance, which involved huddling close together in a circle on the floor, and shuffling their bodies around in imperceptibly tiny, very rapid movements. One of my fellow students used to say that he thought this dance inspired modern styles such as Twerking.</dd>
     <dt>Arctic robot dance</dt>
     <dd>An interesting example of historic misinformation, English explorers in the 1960s believed to have discovered a new dance style characterized by "robotic", stilted movements, being practiced by inhabitants of Northern Alaska and Canada. Later on however it was discovered that they were just moving like this because they were really cold.</dd>
 </dl>
 
-For more of my research, see my <a href="http://google.com" target="_blank">exotic dance research page</a>.
+For more of my research, see my <a href="https://univelcity.com/" target="_blank">exotic dance research page</a>.
 
 <p>Yours sincerely,</p>
 <p>Dr Eleanor Gaye</p>
 
-University of Awesome motto: <q>Be awesome to each other.</q> <cite>-- The memoirs of Bill S Preston, Esq</cite>
+University of Awesome motto: <q>Be awesome to each other.</q> <cite>-- The memoirs of Bill S Preston, <abbr title="Esquire.">Esq</abbr></cite>
 
 </body>
 </html>
