fix modify letter file

--- a/letter.html
+++ b/letter.html
@@ -6,8 +6,22 @@
     <title>Ore's Letter</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
-    <style>address{text-align: right;} 
-    p{font-style: normal;}
+    <style>address{
+        text-align: right;} 
+    p{
+        font-style: normal;}
+    h2{
+        background-color: crimson;}
+    h2~p{
+        background-color: magenta;}
+    address strong, em{
+        color: blue;}
+    ul>li>:first-child{
+        background-color: blue;} 
+    dd{
+        background-color: cyan;}
+
+
     </style>
 </head>
 <body>
@@ -23,10 +37,11 @@
 
 </address>
 
-<em><strong>Miss Eileen Dover</strong> <br>
+<em>
+    <strong>Miss Eileen Dover</strong> <br>
     4321 Cliff Top Edge <br>
     Dover, CT9 XXX <br>
-    UK <br>
+    UK
     </em>
 
 <h1>Re: Eileen Dover university application</h1>
@@ -64,11 +79,11 @@ You can find more information about <a href="https://univelcity.com/" target="_b
 
 <h2>Exotic dance moves</h2>
 
-<P>Yes, you are right! As part of my post-doctorate work, I <em>did</em> study exotic tribal dances. To answer your question, my favourite dances are as follows, with definitions:</P>
+<P>Yes, you are right! As part of my post-doctorate work, I <cite>did</cite> study exotic tribal dances. To answer your question, my favourite dances are as follows, with definitions:</P>
 
 <dl>
     <dt>Polynesian chicken dance</dt>
-    <dd>A little known but <em>very</em> influential dance dating back as far as 300<abbr title="Before City">BC</abbr>, a whole village would dance around in a circle like chickens, to encourage their livestock to be "fruitful".</dd>
+    <dd>A little known but <cite>very</cite> influential dance dating back as far as 300<abbr title="Before City">BC</abbr>, a whole village would dance around in a circle like chickens, to encourage their livestock to be "fruitful".</dd>
     <dt>Icelandic brownian shuffle</dt>
     <dd>Before the Icelanders developed fire as a means of getting warm, they used to practice this dance, which involved huddling close together in a circle on the floor, and shuffling their bodies around in imperceptibly tiny, very rapid movements. One of my fellow students used to say that he thought this dance inspired modern styles such as Twerking.</dd>
     <dt>Arctic robot dance</dt>
