fix modify letter file

--- a/letter.html
+++ b/letter.html
@@ -11,14 +11,14 @@
     p{
         font-style: normal;}
     h2{
-        background-color: crimson;}
-    h2~p{
+        color: crimson;}
+    h2 ~ p{
         background-color: magenta;}
-    address strong, em{
+    address em, strong{
         color: blue;}
-    ul>li>:first-child{
+    li > time{
         background-color: blue;} 
-    dd{
+    dd > *{
         background-color: cyan;}
 
 
