--- a/letter.html
+++ b/letter.html
@@ -83,11 +83,11 @@ You can find more information about <a href="https://univelcity.com/" target="_b
 
 <dl>
     <dt>Polynesian chicken dance</dt>
-    <dd>A little known but <cite>very</cite> influential dance dating back as far as 300<abbr title="Before City">BC</abbr>, a whole village would dance around in a circle like chickens, to encourage their livestock to be "fruitful".</dd>
+    <dd>A little known but <cite>very</cite> influential dance dating back as far as 300<abbr title="Before City">BC</abbr>, a whole village would dance around in a circle like chickens, to encourage their livestock to be <q>fruitful</q>.</dd>
     <dt>Icelandic brownian shuffle</dt>
     <dd>Before the Icelanders developed fire as a means of getting warm, they used to practice this dance, which involved huddling close together in a circle on the floor, and shuffling their bodies around in imperceptibly tiny, very rapid movements. One of my fellow students used to say that he thought this dance inspired modern styles such as Twerking.</dd>
     <dt>Arctic robot dance</dt>
-    <dd>An interesting example of historic misinformation, English explorers in the 1960s believed to have discovered a new dance style characterized by "robotic", stilted movements, being practiced by inhabitants of Northern Alaska and Canada. Later on however it was discovered that they were just moving like this because they were really cold.</dd>
+    <dd>An interesting example of historic misinformation, English explorers in the 1960s believed to have discovered a new dance style characterized by <q>robotic</q>, stilted movements, being practiced by inhabitants of Northern Alaska and Canada. Later on however it was discovered that they were just moving like this because they were really cold.</dd>
 </dl>
 
 For more of my research, see my <a href="https://univelcity.com/" target="_blank">exotic dance research page</a>.
