modify fix letter html

--- a/letter.html
+++ b/letter.html
@@ -14,7 +14,7 @@
         color: crimson;}
     h2 p{
         background-color: magenta;}
-    address strong{
+    address em, strong{
         color: blue;}
     li *{
         background-color: blue;} 
